KSBWI-649: Fix for firefox browser regarding truncation

--- a/src/scss/widget/_widget-theme.scss
+++ b/src/scss/widget/_widget-theme.scss
@@ -18,19 +18,17 @@
       margin-left: 4px;
       margin-right: 4px;
    }
-   div:not(:first-child) {
-      // Text truncation on the rest of items
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
+   div:first-child {
+      // Overwrite text truncation for the first item
+      > div:first-child {
+         overflow: visible;
+         text-overflow: inherit;
+         white-space: inherit;
+      }
    }
    div:last-child {
       @include flexbox; // overrides display: inline-block rule in Kambi CSS
    }
-}
-
-.kw-event-path-name {
-   // @include flex(0 1 auto);
 }
 
 .kw-event-team-home,
